feat(initial commit): plus some resources

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>GraphqlTrial</title>
-    <%= csrf_meta_tags %>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <%= csp_meta_tag %>
+<head>
+  <title>GraphqlTrial</title>
+  <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  
-    <%= stylesheet_pack_tag 'application' %>
-  </head>
+  <%= csp_meta_tag %>
 
-  <body>
-    <div id="vue-app">
-      <app></app>
-      <%= yield %>
-    </div>
-  </body>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+  <%= stylesheet_pack_tag 'application' %>
+</head>
+
+<body>
+  <div id="app">
+    <%= yield %>
+  </div>
+</body>
+
 </html>
